src/objects/Asset_History__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Field History</relationshipLabel>
        <relationshipName>Asset_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Entitlement_End_Date__c</fullName>
        <description>Prior Entitlement End Date</description>
        <inlineHelpText>Prior Entitlement End Date</inlineHelpText>
        <label>Entitlement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_Start_Date__c</fullName>
        <description>Prior Entitlement Start Date</description>
        <inlineHelpText>Prior Entitlement Start Date</inlineHelpText>
        <label>Entitlement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_Term__c</fullName>
        <description>Prior Entitlement Term</description>
        <inlineHelpText>Prior Entitlement Term</inlineHelpText>
        <label>Entitlement Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Originating_LineItem_ID__c</fullName>
        <label>Originating LineItem ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Opportunity_LineItem_URL__c</fullName>
        <label>Originating Opportunity LineItem</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Keeps track of Asset Price History changes</description>
        <inlineHelpText>Keeps track of Asset price history changes</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsageEndDate__c</fullName>
        <label>Usage End Date</label>
        <type>Date</type>
    </fields>
    <label>Asset History</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>